User forgot, resetPassword methods realization. But there are still problems on forgotAndReset methods.
